<resources>
    <string name="app_name">CELT English Quiz</string>

    <string name="achievements">See what you need to do complete your achievements and earn coins to buy power ups in the game</string>
    <string name="facebook_app_id">693263661145986</string>
    <string name="fb_login_protocol_scheme">fb693263661145986</string>
    <string-array name="array_name">
        <item>YES</item>
        <item>NO</item>
    </string-array>

    <string name="privacy1">We are committed to protecting your privacy</string>
    <string name="privacy2">We collect the minimum amount of information about you that is commensurate with providing you with a satisfactory service. This policy indicates the type of processes that may result in data being collected about you. Your use of this website gives us the right to collect that information.</string>
    <string name="privacy3">Information Collected</string>
    <string name="privacy4">We may collect any or all of the information that you give us depending on the type of transaction you enter into, including your name, address, telephone number, and email address, together with data about your use of the website. Other information that may be needed from time to time to process a request may also be collected as indicated on the website.</string>
    <string name="privacy5">Information Use</string>
    <string name="privacy6">We use the information collected primarily to process the task for which you visited the website. Data collected in Turkey is held in accordance with the Data Protection Act. All reasonable precautions are taken to prevent unauthorised access to this information. This safeguard may require you to provide additional forms of identity should you wish to obtain information about your account details.</string>
    <string name="privacy7">Cookies</string>
    <string name="privacy8">Your Internet browser has the in-built facility for storing small files - "cookies" - that hold information which allows a website to recognise your account. Our website takes advantage of this facility to enhance your experience. You have the ability to prevent your computer from accepting cookies but, if you do, certain functionality on the website may be impaired.</string>
    <string name="privacy9">Disclosing Information</string>
    <string name="privacy10">We do not disclose any personal information obtained about you from this website to third parties unless you permit us to do so by ticking the relevant boxes in registration or competition forms. We may also use the information to keep in contact with you and inform you of developments associated with us. You will be given the opportunity to remove yourself from any mailing list or similar device. If at any time in the future we should wish to disclose information collected on this website to any third party, it would only be with your knowledge and consent.
We may from time to time provide information of a general nature to third parties - for example, the number of individuals visiting our website or completing a registration form, but we will not use any information that could identify those individuals.
In addition CELT English may work with third parties for the purpose of delivering targeted behavioural advertising to the CELT website. Through the use of cookies, anonymous information about your use of our websites and other websites will be used to provide more relevant adverts about

goods and services of interest to you. For more information on online behavioural advertising and about how to turn this feature off, please visit youronlinechoices.com/opt-out.
</string>

    <string name="privacy11">Changes to this Policy</string>
    <string name="privacy12">Any changes to our Privacy Policy will be placed here and will supersede this version of our policy. We will take reasonable steps to draw your attention to any changes in our policy. However, to be on the safe side, we suggest that you read this document each time you use the website to ensure that it still meets with your approval.</string>
    <string name="privacy13">Contacting Us</string>
    <string name="privacy14">If you have any questions about our Privacy Policy, or if you want to know what information we have collected about you, please email us at karimov.e@celt.az. You can also correct any factual errors in that information or require us to remove your details form any list under our control. Us</string>

</resources>
